task 1: fixes, multicast, logging changes